// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cjk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

This ia an english paragraph with a CJK quote "中文".

This ia an english paragraph with a CJK quote “中文“.

扩展运算符（spread）是三个点（\`...\`）。

::: warning 注意
该网站在国外无法访问，故以下演示无效
:::

IVS 麻󠄁羽󠄀‼️

⿰あ⿱あ⿲あ⿳あ⿴あ⿵あ⿶あ⿷あ⿸あ⿹あ⿺あ⿻あ

=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長
很長的段落

這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白
全　　形　空白全　　形　空白全　　形　空白

This ia an english paragraph with a CJK quote "中文".

This ia an english paragraph with a CJK quote “中文“.

扩展运算符（spread）是三个点（\`...\`）。

::: warning 注意该网站在国外无法访问，故以下演示无效 :::

IVS 麻󠄁羽󠄀‼️

⿰あ⿱あ⿲あ⿳あ⿴あ⿵あ⿶あ⿷あ⿸あ⿹あ⿺あ⿻あ

================================================================================
`;

exports[`cjk.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

This ia an english paragraph with a CJK quote "中文".

This ia an english paragraph with a CJK quote “中文“.

扩展运算符（spread）是三个点（\`...\`）。

::: warning 注意
该网站在国外无法访问，故以下演示无效
:::

IVS 麻󠄁羽󠄀‼️

⿰あ⿱あ⿲あ⿳あ⿴あ⿵あ⿶あ⿷あ⿸あ⿹あ⿺あ⿻あ

=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

This ia an english paragraph with a CJK quote "中文".

This ia an english paragraph with a CJK quote “中文“.

扩展运算符（spread）是三个点（\`...\`）。

::: warning 注意该网站在国外无法访问，故以下演示无效 :::

IVS 麻󠄁羽󠄀‼️

⿰あ⿱あ⿲あ⿳あ⿴あ⿵あ⿶あ⿷あ⿸あ⿹あ⿺あ⿻あ

================================================================================
`;

exports[`cjk.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

This ia an english paragraph with a CJK quote "中文".

This ia an english paragraph with a CJK quote “中文“.

扩展运算符（spread）是三个点（\`...\`）。

::: warning 注意
该网站在国外无法访问，故以下演示无效
:::

IVS 麻󠄁羽󠄀‼️

⿰あ⿱あ⿲あ⿳あ⿴あ⿵あ⿶あ⿷あ⿸あ⿹あ⿺あ⿻あ

=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

This ia an english paragraph with a CJK quote "中文".

This ia an english paragraph with a CJK quote “中文“.

扩展运算符（spread）是三个点（\`...\`）。

::: warning 注意
该网站在国外无法访问，故以下演示无效
:::

IVS 麻󠄁羽󠄀‼️

⿰あ⿱あ⿲あ⿳あ⿴あ⿵あ⿶あ⿷あ⿸あ⿹あ⿺あ⿻あ

================================================================================
`;

exports[`inline-nodes.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
It removes all original styling[*](#styling-footnote) and ensures that all outputted code conforms to a consistent style. (See this [blog post](http://jlongster.com/A-Prettier-Formatter))

=====================================output=====================================
It removes all original styling[\\*](#styling-footnote) and ensures that all
outputted code conforms to a consistent style. (See this
[blog post](http://jlongster.com/A-Prettier-Formatter))

================================================================================
`;

exports[`inline-nodes.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
It removes all original styling[*](#styling-footnote) and ensures that all outputted code conforms to a consistent style. (See this [blog post](http://jlongster.com/A-Prettier-Formatter))

=====================================output=====================================
It removes all original styling[\\*](#styling-footnote) and ensures that all outputted code conforms to a consistent style. (See this [blog post](http://jlongster.com/A-Prettier-Formatter))

================================================================================
`;

exports[`inline-nodes.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
It removes all original styling[*](#styling-footnote) and ensures that all outputted code conforms to a consistent style. (See this [blog post](http://jlongster.com/A-Prettier-Formatter))

=====================================output=====================================
It removes all original styling[\\*](#styling-footnote) and ensures that all outputted code conforms to a consistent style. (See this [blog post](http://jlongster.com/A-Prettier-Formatter))

================================================================================
`;

exports[`lorem.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
Hic dicta et recusandae incidunt. Reiciendis saepe voluptatem tempore rem aut.
Iusto sapiente impedit. Laudantium ut id non et aperiam ab.
 
Sit minus architecto quas quibusdam sed ipsam aut eum.
Dolores tempora reiciendis magni blanditiis laborum aliquid rem corporis enim. Et consectetur quo sed excepturi soluta repudiandae commodi id.
Eum possimus optio distinctio incidunt quasi optio culpa accusamus.
Architecto esse ut aut autem ullam consequatur reiciendis aliquid dolorum.
 
Et quam mollitia velit iste enim exercitationem nemo.
Hic dignissimos eos et. Eos eos consequatur.

=====================================output=====================================
Hic dicta et recusandae incidunt. Reiciendis saepe voluptatem tempore rem aut.
Iusto sapiente impedit. Laudantium ut id non et aperiam ab.

Sit minus architecto quas quibusdam sed ipsam aut eum. Dolores tempora
reiciendis magni blanditiis laborum aliquid rem corporis enim. Et consectetur
quo sed excepturi soluta repudiandae commodi id. Eum possimus optio distinctio
incidunt quasi optio culpa accusamus. Architecto esse ut aut autem ullam
consequatur reiciendis aliquid dolorum.

Et quam mollitia velit iste enim exercitationem nemo. Hic dignissimos eos et.
Eos eos consequatur.

================================================================================
`;

exports[`lorem.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
Hic dicta et recusandae incidunt. Reiciendis saepe voluptatem tempore rem aut.
Iusto sapiente impedit. Laudantium ut id non et aperiam ab.
 
Sit minus architecto quas quibusdam sed ipsam aut eum.
Dolores tempora reiciendis magni blanditiis laborum aliquid rem corporis enim. Et consectetur quo sed excepturi soluta repudiandae commodi id.
Eum possimus optio distinctio incidunt quasi optio culpa accusamus.
Architecto esse ut aut autem ullam consequatur reiciendis aliquid dolorum.
 
Et quam mollitia velit iste enim exercitationem nemo.
Hic dignissimos eos et. Eos eos consequatur.

=====================================output=====================================
Hic dicta et recusandae incidunt. Reiciendis saepe voluptatem tempore rem aut. Iusto sapiente impedit. Laudantium ut id non et aperiam ab.

Sit minus architecto quas quibusdam sed ipsam aut eum. Dolores tempora reiciendis magni blanditiis laborum aliquid rem corporis enim. Et consectetur quo sed excepturi soluta repudiandae commodi id. Eum possimus optio distinctio incidunt quasi optio culpa accusamus. Architecto esse ut aut autem ullam consequatur reiciendis aliquid dolorum.

Et quam mollitia velit iste enim exercitationem nemo. Hic dignissimos eos et. Eos eos consequatur.

================================================================================
`;

exports[`lorem.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
Hic dicta et recusandae incidunt. Reiciendis saepe voluptatem tempore rem aut.
Iusto sapiente impedit. Laudantium ut id non et aperiam ab.
 
Sit minus architecto quas quibusdam sed ipsam aut eum.
Dolores tempora reiciendis magni blanditiis laborum aliquid rem corporis enim. Et consectetur quo sed excepturi soluta repudiandae commodi id.
Eum possimus optio distinctio incidunt quasi optio culpa accusamus.
Architecto esse ut aut autem ullam consequatur reiciendis aliquid dolorum.
 
Et quam mollitia velit iste enim exercitationem nemo.
Hic dignissimos eos et. Eos eos consequatur.

=====================================output=====================================
Hic dicta et recusandae incidunt. Reiciendis saepe voluptatem tempore rem aut.
Iusto sapiente impedit. Laudantium ut id non et aperiam ab.

Sit minus architecto quas quibusdam sed ipsam aut eum.
Dolores tempora reiciendis magni blanditiis laborum aliquid rem corporis enim. Et consectetur quo sed excepturi soluta repudiandae commodi id.
Eum possimus optio distinctio incidunt quasi optio culpa accusamus.
Architecto esse ut aut autem ullam consequatur reiciendis aliquid dolorum.

Et quam mollitia velit iste enim exercitationem nemo.
Hic dignissimos eos et. Eos eos consequatur.

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
This is a long long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
This is a long long long long long long long long long long long long long long
long paragraph.

================================================================================
`;

exports[`simple.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
This is a long long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
This is a long long long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`simple.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
This is a long long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
This is a long long long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`special-prefix.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc - abc abc abc 

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md) - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md) - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md) - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) - ensure expect is called correctly.

## Supported Rules

* [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md)
  - disallow disabled tests.
* [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md)
  - disallow focused tests.
* [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md)
  - disallow identical titles.
* [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) -
  ensure expect is called correctly.

She grew up in an isolated village in the 19th century and met her father aged 29. Oh no, why are we in a numbered list now?

=====================================output=====================================
abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc
abc - abc abc abc

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md) -
  disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md) -
  disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md) -
  disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) -
  ensure expect is called correctly.

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md)
  - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md)
  - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md)
  - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) -
  ensure expect is called correctly.

She grew up in an isolated village in the 19th century and met her father
aged 29. Oh no, why are we in a numbered list now?

================================================================================
`;

exports[`special-prefix.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc - abc abc abc 

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md) - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md) - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md) - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) - ensure expect is called correctly.

## Supported Rules

* [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md)
  - disallow disabled tests.
* [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md)
  - disallow focused tests.
* [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md)
  - disallow identical titles.
* [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) -
  ensure expect is called correctly.

She grew up in an isolated village in the 19th century and met her father aged 29. Oh no, why are we in a numbered list now?

=====================================output=====================================
abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc - abc abc abc

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md) - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md) - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md) - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) - ensure expect is called correctly.

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md)
  - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md)
  - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md)
  - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) - ensure expect is called correctly.

She grew up in an isolated village in the 19th century and met her father aged 29. Oh no, why are we in a numbered list now?

================================================================================
`;

exports[`special-prefix.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc - abc abc abc 

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md) - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md) - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md) - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) - ensure expect is called correctly.

## Supported Rules

* [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md)
  - disallow disabled tests.
* [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md)
  - disallow focused tests.
* [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md)
  - disallow identical titles.
* [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) -
  ensure expect is called correctly.

She grew up in an isolated village in the 19th century and met her father aged 29. Oh no, why are we in a numbered list now?

=====================================output=====================================
abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc abc - abc abc abc

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md) - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md) - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md) - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) - ensure expect is called correctly.

## Supported Rules

- [no-disabled-tests](/packages/eslint-plugin-jest/docs/rules/no-disabled-tests.md)
  - disallow disabled tests.
- [no-focused-tests](/packages/eslint-plugin-jest/docs/rules/no-focused-tests.md)
  - disallow focused tests.
- [no-identical-title](/packages/eslint-plugin-jest/docs/rules/no-identical-title.md)
  - disallow identical titles.
- [valid-expect](/packages/eslint-plugin-jest/docs/rules/valid-expect.md) -
  ensure expect is called correctly.

She grew up in an isolated village in the 19th century and met her father aged 29. Oh no, why are we in a numbered list now?

================================================================================
`;

exports[`whitespace.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- 0xA0 non-breaking whitespace -->

keep these words together keep these words together keep these words together keep these words together

<!-- 0x20 standard whitespace -->

keep these words together keep these words together keep these words together keep these words together

=====================================output=====================================
<!-- 0xA0 non-breaking whitespace -->

keep these words together keep these words together keep these words together keep these words together

<!-- 0x20 standard whitespace -->

keep these words together keep these words together keep these words together
keep these words together

================================================================================
`;

exports[`whitespace.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
<!-- 0xA0 non-breaking whitespace -->

keep these words together keep these words together keep these words together keep these words together

<!-- 0x20 standard whitespace -->

keep these words together keep these words together keep these words together keep these words together

=====================================output=====================================
<!-- 0xA0 non-breaking whitespace -->

keep these words together keep these words together keep these words together keep these words together

<!-- 0x20 standard whitespace -->

keep these words together keep these words together keep these words together keep these words together

================================================================================
`;

exports[`whitespace.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
<!-- 0xA0 non-breaking whitespace -->

keep these words together keep these words together keep these words together keep these words together

<!-- 0x20 standard whitespace -->

keep these words together keep these words together keep these words together keep these words together

=====================================output=====================================
<!-- 0xA0 non-breaking whitespace -->

keep these words together keep these words together keep these words together keep these words together

<!-- 0x20 standard whitespace -->

keep these words together keep these words together keep these words together keep these words together

================================================================================
`;
